<resources>
    <string name="app_name">Login Firebase</string>
    <string name="email_label_hint">Email</string>
    <string name="password_label_hint">Password</string>
    <string name="btn_login">Log In</string>
    <string name="app_logo_description">Nutrity Logo</string>
    <string name="new_email_label_hint">Email</string>
    <string name="new_password_label_hint">Password</string>
    <string name="confirm_password_label_hint">Confirm Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="register_text">Or, register below</string>
    <string name="have_account_text">Do you already have an account?</string>
    <string name="progress_loading">Loading...</string>
    <string name="signForm_helperText">This field is required.</string>
    <string name="blank">&#160;</string>
    <string name="password_dntMatch">Passwords must match. Try again.</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="email_verification">Please verify your account with the email sent to your mailbox.</string>
    <!--  **** UserConfiguration Activity ****  -->
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="done">Done</string>
    <string name="get_started">Let\'s Get Started!</string>
    <!--  Fab buttons  -->
    <string name="add_photo">Add a photo</string>
    <string name="change_profile_pic">Change profile picture</string>
    <!--  Generic texts  -->
    <string name="next">Next</string>
</resources>