<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="24dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginHorizontal="4dp"
            android:contentDescription="@string/app_logo_description"
            android:src="@drawable/app_logo"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/email_label_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:helperText="@string/blank"
            app:errorContentDescription="@string/signForm_helperText"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/password_label_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:errorContentDescription="@string/signForm_helperText"
            app:helperTextTextColor="@color/red_error"
            app:helperText="@string/blank"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_login" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/login_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp" />

            <TextView
                android:id="@+id/tvRegisterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_divider"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="15dp"
                android:text="@string/register_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccountLink"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRegisterText"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_create_account" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>